--- a/src/styles/Footer.module.scss
+++ b/src/styles/Footer.module.scss
@@ -1,7 +1,7 @@
 @import "./constants.scss";
 
 .container {
-  background: rgb(212, 211, 211);
+  background: #91b6c9;
   display: flex;
   justify-content: center;
   align-items: center;
